tests/base/invalid/Return_CompileFail_8.whiley


void f():
    return 1
